# ghc-debug

./: .gitignore  .gitlab-ci.yml  DEVELOP.md  README.md  cabal.project  call-for-participation.md  ci.sh  default.nix  gen-docs  log  shell.nix  simple-shell.nix  test-pause  test-pause-unpause
client/: CHANGELOG.md  Test.hs  ghc-debug-client.cabal
client/src/GHC/Debug/: Client.hs  Count.hs  Dominators.hs  Fragmentation.hs  GML.hs  ObjectEquiv.hs  ParTrace.hs  Profile.hs  Retainers.hs  Snapshot.hs  Strings.hs  Trace.hs  TypePointsFrom.hs
client/src/GHC/Debug/Client/: BlockCache.hs  Count.hs  Dominators.hs  Fragmentation.hs  Monad.hs  ObjectEquiv.hs  Profile.hs  Query.hs  RequestCache.hs  Retainers.hs  Search.hs  Snapshot.hs  Trace.hs  Utils.hs
client/src/GHC/Debug/Client/Monad/: Class.hs  Haxl.hs  Simple.hs
client/src/GHC/Debug/Profile/: Types.hs
common/: CHANGELOG.md  ghc-debug-common.cabal
common/cbits/: GhcDebug.cmm  Heap.c
common/src/GHC/Debug/: Convention.hs  Decode.hs  Types.hs  Utils.hs
common/src/GHC/Debug/Decode/: Convert.hs  Stack.hs
common/src/GHC/Debug/Types/: Closures.hs  Graph.hs  Ptr.hs  Version.hs
convention/: CHANGELOG.md  ghc-debug-convention.cabal
convention/src/GHC/Debug/: Convention.hs
debuggee/: CHANGELOG.md  Test.hs  ghc-debug-stub.cabal
debuggee/cbits/: parser.h  stub.cpp
debuggee/src/GHC/Debug/: Stub.hs
debugger/: CHANGELOG.md  Test.hs  ghc-debug-client.cabal
docs/: 02-snapshots.md  03-retainers.md  04-type-points-from.md  07-internals.md  heap-structure.md  index.md
docs/data/: 00-introduction.md  01-profiling-modes.md  02-snapshots.md  03-retainers.md  04-type-points-from.md  05-fragmentation.md  06-custom-traversals.md  07-internals.md
docs/templates/: default.html  docs.html
dyepack-test/: CHANGELOG.md  Main.hs  dyepack-test.cabal
ghc-debug-brick/: CHANGELOG.md  LICENSE  ghc-debug-brick.cabal
ghc-debug-brick/src/: Common.hs  IOTree.hs  Lib.hs  Main.hs  Model.hs  Namespace.hs  TextCursor.hs
ghc-debug-brick/src/Cursor/: List.hs  Text.hs  Types.hs
ghc-vis/: .gitignore  ghc-vis.cabal
ghc-vis/experiments/: sprinkle-cps.hs  sprinkle.hs
ghc-vis/src/GHC/: Vis.hs
ghc-vis/src/GHC/Vis/: Internal.hs  Types.hs
ghc-vis/src/GHC/Vis/View/: Common.hs  Graph.hs  List.hs
ghc-vis/src/GHC/Vis/View/Graph/: Parser.hs
ghc-vis/test/: Main.hs
nix/: site.nix
site/: hakyll-ghc-debug.cabal  site.hs
stub/: CHANGELOG.md  LICENSE  LargeThunk.hs  Test.hs  ghc-debug-stub.cabal
stub/cbits/: socket.cpp  socket.h  stub.cpp  trace.cpp  trace.h
stub/src/GHC/Debug/: Stub.hs
test/: StringAnalysis.hs  Test.hs  ghc-debugger.cabal
test/test/: Server.hs  SystemTest.hs  TestSetup.hs
test/test-progs/: Clock.hs  Cycles.hs  SaveIPEPause.hs  SaveOne.hs  SaveOnePause.hs  Test.hs  srts.hs
