name:                ghc-debug-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Debug.Client,
                       GHC.Debug.Client.Retainers,
                       GHC.Debug.Client.Monad,
                       GHC.Debug.Client.BlockCache,
                       GHC.Debug.Client.RequestCache,
                       GHC.Debug.Client.Monad.Class
                       GHC.Debug.Client.Monad.Haxl
                       GHC.Debug.Client.Monad.Simple
                       GHC.Debug.Client.Utils

  build-depends:       base >=4.12 && <4.14,
                       network >=2.6 && <2.7,
                       unordered-containers,
                       ghc-debug-common, cpu,
                       text, process, filepath, directory,
                       haxl, hashable, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall
