name:                ghc-debug-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Debug.Client,
                       GHC.Debug.Retainers,
                       GHC.Debug.Fragmentation,
                       GHC.Debug.ObjectEquiv,
                       GHC.Debug.Client.Search,
                       GHC.Debug.Profile,
                       GHC.Debug.Profile.Types,
                       GHC.Debug.Trace,
                       GHC.Debug.ParTrace,
                       GHC.Debug.Count,
                       GHC.Debug.TypePointsFrom,
                       GHC.Debug.Snapshot
                       GHC.Debug.Dominators
                       GHC.Debug.Client.Query
                       GHC.Debug.Client.Monad,
                       GHC.Debug.Client.BlockCache,
                       GHC.Debug.Client.RequestCache,
                       GHC.Debug.Client.Monad.Class
                       GHC.Debug.Client.Monad.Haxl
                       GHC.Debug.Client.Monad.Simple

  build-depends:       base >=4.12 && <4.14,
                       network >=2.6 && <2.7,
                       containers,
                       unordered-containers,
                       ghc-debug-common, ghc-debug-convention,
                       text, process, filepath, directory, bitwise,
                       haxl, hashable, mtl, eventlog2html >= 0.8.3, binary, psqueues,
                       dom-lt, async, monoidal-containers, language-dot, stm, ghc-prim

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall
