cabal-version:       3.0
name:                ghc-debug-client
version:             0.2.1.0
synopsis:            Useful functions for writing heap analysis tools which use
                     ghc-debug.
description:         Useful functions for writing heap analysis tools which use
                     ghc-debug.
homepage:            https://gitlab.haskell.org/ghc/ghc-debug
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari, Matthew Pickering, David Eichmann
maintainer:          matthewtpickering@gmail.com
copyright:           (c) 2019-2021 Ben Gamari, Matthew Pickering
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GHC.Debug.Client,
                       GHC.Debug.Retainers,
                       GHC.Debug.GML,
                       GHC.Debug.Fragmentation,
                       GHC.Debug.ObjectEquiv,
                       GHC.Debug.Client.Search,
                       GHC.Debug.Profile,
                       GHC.Debug.Profile.Types,
                       GHC.Debug.Trace,
                       GHC.Debug.ParTrace,
                       GHC.Debug.Count,
                       GHC.Debug.TypePointsFrom,
                       GHC.Debug.Snapshot,
                       GHC.Debug.Dominators,
                       GHC.Debug.Client.Query,
                       GHC.Debug.Client.Monad,
                       GHC.Debug.Client.BlockCache,
                       GHC.Debug.Client.RequestCache,
                       GHC.Debug.Client.Monad.Class,
                       GHC.Debug.Client.Monad.Simple

  build-depends:       base >=4.16 && < 4.17,
                       network >= 2.6 ,
                       containers ^>= 0.6,
                       unordered-containers ^>= 0.2.13,
                       ghc-debug-common == 0.2.1.0,
                       ghc-debug-convention == 0.2.0.0,
                       text ^>= 1.2.4,
                       process ^>= 1.6,
                       filepath ^>= 1.4,
                       directory ^>= 1.3,
                       bitwise ^>= 1.0,
                       hashable >= 1.3 && < 1.5,
                       mtl ^>= 2.2,
                       eventlog2html >= 0.8.3,
                       binary ^>= 0.8,
                       psqueues ^>= 0.2,
                       dom-lt ^>= 0.2,
                       async ^>= 2.2,
                       monoidal-containers >= 0.6,
                       language-dot ^>= 0.1,
                       ghc-prim ^>= 0.8,
                       stm ^>= 2.5

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall
