cabal-version:       3.0
name:                ghc-debug-common
version:             0.1.0.0
synopsis:            A debugger for GHC
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GHC.Debug.Decode,
                       GHC.Debug.Decode.Convert,
                       GHC.Debug.Decode.Stack,
                       GHC.Debug.Types,
                       GHC.Debug.Types.Closures,
                       GHC.Debug.Types.Graph,
                       GHC.Debug.Types.Ptr
  build-depends:       base >=4.12 && <4.14,
                       bytestring >=0.10 && <0.11,
                       binary >=0.8 && <0.9,
                       array,
                       directory,
                       filepath,
                       hashable,
                       ghc-heap,
                       cpu,
                       containers,
                       transformers,
                       dom-lt,
                       unordered-containers,
                       ghc-debug-convention

  hs-source-dirs:      src
  cmm-sources:         cbits/GhcDebug.cmm
-- GhcDebug.cmm in c-sources is a hack to get the build working (GhcDebug.cmm should only appear in cmm-sources)
  c-sources:           cbits/Heap.c
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions: ApplicativeDo
