cabal-version:       3.0
name:                ghc-debug-common
version:             0.2.1.0
synopsis:            Connect to a socket created by ghc-debug-stub and analyse
                     the heap of the debuggee program.
description:         Connect to a socket created by ghc-debug-stub and analyse
                     the heap of the debuggee program.
homepage:            https://gitlab.haskell.org/ghc/ghc-debug
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari, Matthew Pickering
maintainer:          matthewtpickering@gmail.com
copyright:           (c) 2021 Ben Gamari, Matthew Pickering
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GHC.Debug.Decode,
                       GHC.Debug.Decode.Convert,
                       GHC.Debug.Decode.Stack,
                       GHC.Debug.Types,
                       GHC.Debug.Types.Closures,
                       GHC.Debug.Types.Graph,
                       GHC.Debug.Utils,
                       GHC.Debug.Types.Ptr
  build-depends:       base >=4.16 && < 5,
                       bytestring ^>=0.11,
                       binary ^>=0.8,
                       array ^>= 0.5,
                       directory ^>= 1.3 ,
                       filepath ^>= 1.4,
                       hashable >= 1.3 && <= 1.5,
                       ghc-heap >= 9.1,
                       cpu ^>= 0.1,
                       containers ^>= 0.6,
                       transformers ^>= 0.5,
                       dom-lt ^>= 0.2,
                       unordered-containers ^>= 0.2,
                       ghc-debug-convention == 0.2.0.0,
                       deepseq ^>= 1.4

  hs-source-dirs:      src
  cmm-sources:         cbits/GhcDebug.cmm
  c-sources:           cbits/Heap.c
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions: ApplicativeDo
