cabal-version:      2.4
name:               ghc-debug-convention
version:            0.1.0.0

synopsis: Definitions needed by ghc-debug-stub and ghc-debug-common

-- A longer description of the package.
description: Definitions needed by ghc-debug-stub and ghc-debug-common

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: GHC.Debug.Convention
    build-depends:    base ^>=4.16.0.0, filepath, directory
    hs-source-dirs:   src/
    default-language: Haskell2010
