cabal-version:      2.4
name:               ghc-debug-convention
version:            0.5.0.0
synopsis: Definitions needed by ghc-debug-stub and ghc-debug-common
description: Definitions needed by ghc-debug-stub and ghc-debug-common
-- bug-reports:
license:            BSD-3-Clause
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
copyright:          BSD-3-Clause
extra-source-files: CHANGELOG.md

library
    exposed-modules: GHC.Debug.Convention
    build-depends:    base >=4.16.0.0 && < 5, filepath ^>= 1.4 , directory ^>= 1.3
    hs-source-dirs:   src/
    default-language: Haskell2010
