cabal-version:       2.4
name:                ghc-debug-brick
version:             0.1.0.0
synopsis: A simple TUI using ghc-debug
description: A simple TUI using ghc-debug
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Eichmann, Matthew Pickering
maintainer:          matthew@well-typed.com
copyright:
category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ghc-heap-view
  main-is:             Main.hs
  other-modules:       Model
                     , Namespace
                     , IOTree
                     , TextCursor
                     , Common
                     , Lib
  -- other-extensions:
  build-depends:       base >=4.10 && <5
                     , brick
                     , cursor
                     , containers
                     , directory
                     , filepath
                     , ghc-debug-client
                     , microlens-platform
                     , text
                     , vty
                     , time
                     , microlens
                     , ghc-debug-common
                     , ghc-debug-convention
                     , unordered-containers
                     , exceptions
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -threaded -Wall
