cabal-version:       2.4
name:                ghc-debug-brick
version:             0.2.1.0
synopsis: A simple TUI using ghc-debug
description: A simple TUI using ghc-debug
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Eichmann, Matthew Pickering
maintainer:          matthew@well-typed.com
copyright:
category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ghc-heap-view
  main-is:             Main.hs
  other-modules:       Model
                     , Namespace
                     , IOTree
                     , TextCursor
                     , Common
                     , Lib
                     , Cursor.Types
                     , Cursor.Text
                     , Cursor.List
  -- other-extensions:
  build-depends:       base >=4.16 && <5
                     , brick
                     , containers
                     , directory
                     , filepath
                     , microlens-platform
                     , text
                     , vty
                     , time
                     , deepseq
                     , microlens
                     , ghc-debug-client == 0.2.1.0
                     , ghc-debug-common == 0.2.1.0
                     , ghc-debug-convention == 0.2.0.0
                     , unordered-containers
                     , exceptions
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -threaded -Wall
