cabal-version:       2.4
name:                ghc-debug-brick
version:             0.5.0.0
synopsis:            A simple TUI using ghc-debug
description:         A simple TUI using ghc-debug
bug-reports:         https://gitlab.haskell.org/ghc/ghc-debug/-/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Eichmann, Matthew Pickering
maintainer:          matthew@well-typed.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ghc-debug-brick
  main-is:             Main.hs
  other-modules:       Model
                     , Namespace
                     , IOTree
                     , Common
                     , Lib
  build-depends:       base >=4.16 && <5
                     , brick >= 1.3
                     , containers
                     , directory
                     , filepath
                     , microlens-platform
                     , text
                     , vty
                     , time
                     , deepseq
                     , microlens
                     , ghc-debug-client == 0.5.0.0
                     , ghc-debug-common == 0.5.0.0
                     , ghc-debug-convention == 0.5.0.0
                     , unordered-containers
                     , exceptions
                     , contra-tracer
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -threaded -Wall
