name:                ghc-debug-stub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

flag trace
  Description: Enable tracing
  Default:     False
  Manual:      True

library
  exposed-modules:     GHC.Debug.Stub
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <4.14
  default-language:    Haskell2010
  c-sources:           cbits/stub.cpp, cbits/socket.cpp
  extra-libraries:     stdc++
  if flag(trace)
    CPP-Options: -DTRACE

executable debug-test
  main-is:             Test.hs
  ghc-options:         -threaded -debug -g3 -O0
  build-depends:       base,
                       ghc-debug-stub,
                       ghc-prim
  default-language:    Haskell2010
