cabal-version:       2.1
name:                ghc-debug-stub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag trace
  Description: Enable tracing
  Default:     False
  Manual:      True

library
  exposed-modules:     GHC.Debug.Stub
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <4.14, ghc-prim
  default-language:    Haskell2010
  cxx-sources:         cbits/stub.cpp, cbits/socket.cpp, cbits/trace.cpp
  cxx-options:         -std=gnu++11
  ghc-options:         -threaded
  extra-libraries:     stdc++
  if flag(trace)
    cpp-options: -DTRACE

executable debug-test
  main-is:             Test.hs
  ghc-options:         -threaded -debug -g3 -O0 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base,
                       ghc-debug-stub, containers, unordered-containers
  default-language:    Haskell2010

executable large-thunk
  main-is:             LargeThunk.hs
  ghc-options:         -threaded -debug -g3 -O2 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base,
                       ghc-debug-stub, containers, deepseq
  default-language:    Haskell2010
