name:                ghc-debugger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable debugger
  main-is:             Test.hs
  ghc-options:         -threaded -debug -g3
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , ghc-vis
                     , containers
                     , extra
                     , process
  default-language:    Haskell2010
  build-tool-depends: ghc-debug-stub:debug-test, dyepack-test:dyepack-test

test-suite system-test
  type: exitcode-stdio-1.0
  main-is: TestSetup.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , hspec ==2.*
    , process
    , ghc-debug-client
    , ghc-debug-common
    , ghc-vis
    , directory
    , async
    , extra
    , dwarfadt
    , text
  other-modules:
        SystemTest
      , Server
  default-language: Haskell2010
  ghc-options:         -threaded -debug -g3
  build-tool-depends: ghc-debug-stub:debug-test
                    , ghc-debugger:save-one
                    , ghc-debugger:clock

executable save-one
  main-is:             SaveOne.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -g3 -O0
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , ghc-vis
                     , containers
                     , extra
                     , process
                     , ghc-debug-stub
  default-language:    Haskell2010

executable clock
  main-is:             Clock.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -g3 -O0
  build-depends:       base
                     , ghc-debug-stub
  default-language:    Haskell2010

