name:                ghc-debugger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable debugger
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -eventlog
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , mtl
                     , text
  default-language:    Haskell2010
  build-tool-depends: ghc-debug-stub:debug-test, dyepack-test:dyepack-test
  default-extensions: ApplicativeDo

test-suite system-test
  type: exitcode-stdio-1.0
  main-is: TestSetup.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , tasty
    , tasty-hspec
    , process
    , ghc-debug-client
    , ghc-debug-common
    , directory
    , async
    , extra
    , text
  other-modules:
        SystemTest
      , Server
  default-language: Haskell2010
  ghc-options:         -threaded -debug -g3
  build-tool-depends: ghc-debug-stub:debug-test
                    , ghc-debugger:save-one-pause
                    , ghc-debugger:clock

executable clock
  main-is:             Clock.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -g3 -O0
  build-depends:       base
                     , ghc-debug-stub
  default-language:    Haskell2010

executable save-one-pause
  main-is:             SaveOnePause.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -g3 -O0
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , ghc-debug-stub
  default-language:    Haskell2010

