name:                ghc-debugger
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bgamari/ghc-debug
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable debugger
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -eventlog "-with-rtsopts=-N -qn1"
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , mtl
                     , text
                     , bytestring
  default-language:    Haskell2010
  build-tool-depends: dyepack-test:dyepack-test
  default-extensions: ApplicativeDo

test-suite system-test
  type: exitcode-stdio-1.0
  main-is: TestSetup.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , tasty
    , tasty-hspec
    , process
    , ghc-debug-client == 0.2.0.0
    , ghc-debug-common == 0.2.0.0
    , directory
    , async
    , extra
    , text
    , filepath
    , temporary
    , hspec
  other-modules:
        SystemTest
      , Server
  default-language: Haskell2010
  ghc-options:         -threaded -rtsopts
  build-tool-depends: ghc-debugger:debug-test
                    , ghc-debugger:save-one-pause
                    , ghc-debugger:save-ipe-pause
                    , ghc-debugger:clock
                    , ghc-debugger:cycles

executable clock
  main-is:             Clock.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -O0 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base
                     , ghc-debug-stub
  default-language:    Haskell2010

executable save-one-pause
  main-is:             SaveOnePause.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -debug -O0 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , ghc-debug-stub
  default-language:    Haskell2010

executable save-ipe-pause
  main-is:             SaveIPEPause.hs
  hs-source-dirs:
      test-progs
  ghc-options:         -threaded -O0 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , ghc-debug-stub
  default-language:    Haskell2010

executable cycles
  main-is:             Cycles.hs
  hs-source-dirs:
      test-progs
  -- NOTE: at the moment disabling optimizations seems to be required to create
  -- cycles in the heap for generalBuildHeapGraph to choke on:
  ghc-options:         -threaded -debug -O0
  build-depends:       base
                     , ghc-debug-client
                     , ghc-debug-common
                     , ghc-heap
                     , containers
                     , extra
                     , process
                     , ghc-debug-stub
  default-language:    Haskell2010

executable debug-test
  main-is:             Test.hs
  hs-source-dirs:      test-progs
  ghc-options:         -threaded  -g3 -O0 -finfo-table-map -fdistinct-constructor-tables
  build-depends:       base,
                       ghc-debug-stub, containers, unordered-containers
  default-language:    Haskell2010

executable large-thunk
  main-is:             LargeThunk.hs
  hs-source-dirs:      test-progs
  ghc-options:         -threaded -g3 -O2 -finfo-table-map -fdistinct-constructor-tables -rtsopts
  build-depends:       base,
                       ghc-debug-stub, containers, deepseq
  default-language:    Haskell2010
